# icm-ev-calculator

./: README.md  pyproject.toml
icm/: icm_ev.py  main.py
