[tool.poetry]
name = "icm"
version = "0.1.0"
description = ""
authors = ["kwangsung.ha <kwangsung.ha@wesang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
ruff = "^0.4.3"
streamlit = "^1.34.0"
poethepoet = "^0.20.0"

[tool.poe.tasks]
app = "streamlit run icm/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
